--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>連動スクワット × トレッドミル週6プログラム</title>
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#1c3b2a">
+ <link rel="manifest" href="./manifest.json">
+  <meta name="theme-color" content="#1c3b2a">
+  <link rel="icon" href="./192-icons.png" type="image/png" sizes="192x192">
+  <link rel="apple-touch-icon" href="./512-icons.png">
 <style>
   :root {
     --chalk:#fff;
