--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <meta name="theme-color" content="#1c3b2a">
 
 <!-- 👇 iOSがアイコンを認識するために必要 -->
-<link rel="apple-touch-icon" sizes="192x192" href="https://adjustment-commits.github.io/fkk-14-fujiwara/192-icons.png">
-<link rel="apple-touch-icon" sizes="512x512" href="https://adjustment-commits.github.io/fkk-14-fujiwara/512-icons.png">
+<link rel="apple-touch-icon" sizes="192x192" href="https://adjustment-commits.github.io/fkk-14-fujiwara/192-icons.PNG">
+<link rel="apple-touch-icon" sizes="512x512" href="https://adjustment-commits.github.io/fkk-14-fujiwara/512-icons.PNG">
 <!-- 👇 favicon としても登録 -->
-<link rel="apple-touch-icon" sizes="192x192" href="https://adjustment-commits.github.io/fkk-14-fujiwara/192-icons.png">
-<link rel="apple-touch-icon" sizes="512x512" href="https://adjustment-commits.github.io/fkk-14-fujiwara/512-icons.png">
+<link rel="apple-touch-icon" sizes="192x192" href="https://adjustment-commits.github.io/fkk-14-fujiwara/192-icons.PNG">
+<link rel="apple-touch-icon" sizes="512x512" href="https://adjustment-commits.github.io/fkk-14-fujiwara/512-icons.PNG">
 <!-- 👇 iOSにPWA動作を許可させるmeta -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
