--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <meta name="apple-mobile-web-app-title" content="連動スクワット">
 
 <style>
-  :root {
-    --chalk:#fff;
-    --board:#1c3b2a;
-    --accent:#a8ff9e;
-  }
+ :root {
+  --chalk: #111;
+  --board: #fff;
+  --accent: #007b3a; 
+ }
   body {
     font-family:"Hiragino Sans","Yu Gothic",sans-serif;
     background:var(--board);
@@ -95,19 +95,19 @@
 <header><h1>連動スクワット × トレッドミル週6プログラム</h1></header>
 
 <div class="tabs">
-  <div class="tab active" data-target="day1">Day1</div>
-  <div class="tab" data-target="day2">Day2</div>
-  <div class="tab" data-target="day3">Day3</div>
-  <div class="tab" data-target="day4">Day4</div>
-  <div class="tab" data-target="day5">Day5</div>
-  <div class="tab" data-target="day6">Day6</div>
+  <div class="tab active" data-target="day1">Program A</div>
+  <div class="tab" data-target="day2">Program B</div>
+  <div class="tab" data-target="day3">Program C</div>
+  <div class="tab" data-target="day4">Program D</div>
+  <div class="tab" data-target="day5">Program E</div>
+  <div class="tab" data-target="day6">Program F</div>
 </div>
 
 <div class="content">
 
 <!-- ========== Day1 ========== -->
 <section id="day1" class="day-section active">
-<h2>Day1　軸とテンションの安定</h2>
+<h2>Program A　軸とテンションの安定</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="sq">バックスクワット 5×5</li></ul>
 <div class="theme">連動スクワット</div>
@@ -128,7 +128,7 @@
 
 <!-- ========== Day2 ========== -->
 <section id="day2" class="day-section">
-<h2>Day2　骨盤と胸郭の同調</h2>
+<h2>Program B　骨盤と胸郭の同調</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="bp">ベンチプレス 5×5</li></ul>
 <div class="theme">連動スクワット</div>
@@ -149,7 +149,7 @@
 
 <!-- ========== Day3 ========== -->
 <section id="day3" class="day-section">
-<h2>Day3　分離と対回旋</h2>
+<h2>DProgram C　分離と対回旋</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="dl">デッドリフト 5×3</li></ul>
 <div class="theme">連動スクワット</div>
@@ -170,7 +170,7 @@
 
 <!-- ========== Day4 ========== -->
 <section id="day4" class="day-section">
-<h2>Day4　再統合（全身連動）</h2>
+<h2>Program D　再統合（全身連動）</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="sq2">軽負荷スクワット 3×8</li></ul>
 <div class="theme">連動スクワット</div>
@@ -191,7 +191,7 @@
 
 <!-- ========== Day5 ========== -->
 <section id="day5" class="day-section">
-<h2>Day5　自動化と反応制御</h2>
+<h2>DProgram E　自動化と反応制御</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="dl2">デッドリフト or ベンチプレス（軽負荷）3×6</li></ul>
 <div class="theme">連動スクワット</div>
@@ -212,7 +212,7 @@
 
 <!-- ========== Day6 ========== -->
 <section id="day6" class="day-section">
-<h2>Day6　呼吸と統合リセット</h2>
+<h2>Program F　呼吸と統合リセット</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="fsq">フロントスクワット（軽負荷）3×8</li></ul>
 <div class="theme">連動スクワット</div>
