--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     color:var(--chalk);
     margin:0; padding:0;
   }
-  header {
-    text-align:center;
-    padding:16px;
-    border-bottom:1px solid rgba(255,255,255,0.2);
+ header {
+  text-align:center;
+  padding:16px;
+  border-bottom:1px solid rgba(0,0,0,0.1);
   }
   h1 {font-size:20px; margin:0;}
   .tabs {
@@ -67,7 +67,7 @@
   li {margin-bottom:6px;cursor:pointer;}
   li:hover {color:var(--accent);text-decoration:underline;}
   .theme {color:var(--accent);margin-top:10px;font-weight:600;}
-  .goal {color:#ccc;font-size:14px;margin-top:10px;}
+ 　.goal {color:#444;font-size:14px;margin-top:10px;}
 
   /* モーダル */
   .modal {
@@ -149,7 +149,7 @@
 
 <!-- ========== Day3 ========== -->
 <section id="day3" class="day-section">
-<h2>DProgram C　分離と対回旋</h2>
+<h2>Program C　分離と対回旋</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="dl">デッドリフト 5×3</li></ul>
 <div class="theme">連動スクワット</div>
@@ -191,7 +191,7 @@
 
 <!-- ========== Day5 ========== -->
 <section id="day5" class="day-section">
-<h2>DProgram E　自動化と反応制御</h2>
+<h2>Program E　自動化と反応制御</h2>
 <div class="theme">メインウエイト</div>
 <ul><li data-ex="dl2">デッドリフト or ベンチプレス（軽負荷）3×6</li></ul>
 <div class="theme">連動スクワット</div>
