--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 </ul>
 <div class="theme">逆算エクササイズ</div>
 <ul>
-<li data-ex="cat">キャット＆カウ</li>
+<li data-ex="cat">キャット＆ドッグ</li>
 <li data-ex="hinge">ヒップヒンジ＋胸郭開閉ドリル</li>
 <li data-ex="yraise">ショルダーYリフト</li>
 </ul>
